# hostdinghy

./: .dockerignore  .editorconfig  .rules  Cargo.toml  DEV.md  EX_CRELTE_TUT.md  MVP.md  README.md  SETUP.md  SETUP_P1.md  compose.yml  dev.sh  pgadmin-servers.json
.github/workflows/: docs.yaml
DOCS/: compose.md
compose-yml/: Cargo.toml
compose-yml/src/: error.rs  lib.rs
dockerfiles/: Dockerfile
docs/: compose.md  index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
huus/: Cargo.toml  config.toml
huus-internal-api/: Cargo.toml
huus-internal-api/src/: app_id.rs  apps.rs  error.rs  lib.rs  requests.rs
huus-internal-api/src/client/: mod.rs
huus-root/: Cargo.toml
huus-root/src/: main.rs
huus-ui/: index.html  package-lock.json  package.json
huus-ui/src/: App.svelte  app.scss  main.ts
huus-ui/src/api/: apps.ts  servers.ts  users.ts  utils.ts
huus-ui/src/components/: Button.svelte  Editor.svelte  ModeWatcher.svelte  Table.svelte  Tabs.svelte
huus-ui/src/form/: Field.svelte  Input.svelte  Select.svelte
huus-ui/src/layout/: AppLayout.svelte  Footer.svelte  Header.svelte  MainLayout.svelte  TabLayout.svelte  Toasts.svelte
huus-ui/src/lib/: Editor.ts  LoadProps.ts  Session.ts  layout.ts
huus-ui/src/pages/: Index.svelte  SignIn.svelte  routes.ts
huus-ui/src/pages/apps/: Create.svelte  Detail.svelte
huus-ui/src/pages/settings/: Account.svelte  Appearance.svelte
huus-ui/src/sass/: form.scss  resets.scss
huus-web/: Cargo.toml
huus-web/src/: error.rs  main.rs  utils.rs
huus-web/src/apps/: data.rs  database.rs  mock.rs  mod.rs  routes.rs
huus-web/src/apps/data/: database.rs
huus-web/src/apps/migrations/: create-apps.sql
huus-web/src/apps/routes/: mod.rs
huus-web/src/internal/: mock.rs  mod.rs  real.rs
huus-web/src/internal/mock/: mock_compose.yml  mod.rs  storage.rs
huus-web/src/routes/: cors.rs
huus-web/src/servers/: cli.rs  data.rs  database.rs  mock.rs  mod.rs  routes.rs
huus-web/src/servers/migrations/: create-servers.sql
huus-web/src/teams/: database.rs  mod.rs  routes.rs
huus-web/src/teams/migrations/: create-teams.sql
huus-web/src/ui/: routes.rs
huus-web/src/users/: cli.rs  data.rs  database.rs  mod.rs  routes.rs  utils.rs
huus/src/: main.rs
huus/src/apps/: routes.rs  utils.rs
huus/src/apps/routes/: mod.rs
huus/src/docker/: mod.rs
huus/src/postgresql/: client.rs  mod.rs  utils.rs
huus/src/registry/: mod.rs
huus/src/runtime_test/: mod.rs
huus/src/server/: cert.rs  config.rs  error.rs  mod.rs  router.rs  utils.rs
huus/src/setup/: cmd.rs  error.rs  mod.rs  postgresql.rs  registry.rs  traefik.rs
huus/src/traefik/: client.rs  mod.rs  utils.rs
huus/src/users/: api.rs  data.rs  mock.rs  routes.rs
huus/src/users/migrations/: create-users.sql
huus/src/utils/: cli.rs  cmd.rs  compose.rs  mod.rs
internal-api/: Cargo.toml
internal-api/src/: app_id.rs  apps.rs  database_name.rs  error.rs  lib.rs  postgres.rs  registry.rs  registry_username.rs  requests.rs
internal-api/src/client/: apps.rs  mod.rs  postgres.rs  registry.rs
server/: Cargo.toml
server/src/: main.rs
server/src/apps/: routes.rs  utils.rs
server/src/config/: mod.rs
server/src/postgres/: client.rs  mod.rs  routes.rs  utils.rs
server/src/postgresql/: mod.rs  utils.rs
server/src/registry/: mod.rs  routes.rs
server/src/server/: cert.rs  config.rs  error.rs  mod.rs  router.rs  utils.rs
server/src/setup/: mod.rs  postgres.rs  postgresql.rs  registry.rs  server.rs  studio.rs  traefik.rs
server/src/traefik/: api.rs  client.rs  mod.rs
server/src/utils/: cli.rs  cmd.rs  compose.rs  mod.rs
studio-server/: Cargo.toml  config.toml
studio-server/src/: error.rs  main.rs
studio-server/src/apps/data/: database.rs  mock.rs  mod.rs
studio-server/src/apps/routes/: compose.rs  fs.rs  get.rs  main.rs  mod.rs  registry.rs  set.rs  utils.rs
studio-server/src/internal/: mod.rs  real.rs
studio-server/src/internal/mock/: mock_compose.yml  mock_logs.txt  mod.rs  storage.rs
studio-server/src/servers/: cli.rs  data.rs  database.rs  mod.rs  routes.rs
studio-server/src/servers/migrations/: create-servers.sql
studio-server/src/servers/routes/: mod.rs  postgres.rs  registry.rs  utils.rs
studio-server/src/teams/: data.rs  mock.rs
studio-server/src/teams/migrations/: create-teams.sql
studio-server/src/users/: cli.rs  data.rs  database.rs  mock.rs  mod.rs  routes.rs
studio-server/src/users/migrations/: create-users.sql
studio-server/src/webui/: mod.rs  routes.rs
studio-webui/: eslint.config.js  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
studio-webui/src/: App.svelte  app.scss  client.ts  main.ts
studio-webui/src/api/: lib.ts  servers.ts  users.ts
studio-webui/src/api/apps/: compose.ts  fs.ts  index.ts  registry.ts
studio-webui/src/api/servers/: index.ts  postgres.ts  registry.ts
studio-webui/src/assets/icons/: Add.svelte  Close.svelte  Delete.svelte  Download.svelte  KeyAlert.svelte  Pause.svelte  PlayArrow.svelte  Refresh.svelte  Stop.svelte  Sync.svelte  Upload.svelte
studio-webui/src/components/: Button.svelte  ButtonGroup.svelte  Crumbs.svelte  DescriptionList.svelte  DiffViewer.svelte  Editor.svelte  Header.svelte  Modal.svelte  ModeWatcher.svelte  Status.svelte  Table.svelte  Tabs.svelte
studio-webui/src/components/fs/: DirectoryContent.svelte
studio-webui/src/components/modal/: CloseModal.svelte  Modal.svelte  NewPasswordModal.svelte
studio-webui/src/components/table/: Table.svelte  (+2 more)
studio-webui/src/form/: Field.svelte  FileUpload.svelte  Input.svelte  ProgressBar.svelte  Select.svelte  Textarea.svelte
studio-webui/src/layout/: AppLayout.svelte  Footer.svelte  Header.svelte  MainLayout.svelte  PageLoader.svelte  ServerLayout.svelte  SettingsLayout.svelte  TabLayout.svelte  Toasts.svelte
studio-webui/src/lib/: Editor.ts  LoadProps.ts  Session.ts  body.ts  index.ts  layout.ts  time.ts
studio-webui/src/pages/: Error.svelte  Index.svelte  NotFound.svelte  SignIn.svelte  routes.ts
studio-webui/src/sass/: form.scss  resets.scss
(+30 files in other folders)
