[package]
name = "huus-internal-api"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1"
# tokio = { version = "1.45.1", features = [
# 	"rt-multi-thread",
# 	"fs",
# 	"io-util",
# 	"sync",
# 	"macros",
# 	"tracing",
# 	"process",
# ] }
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
chuchi-postgres = { version = "0.2.0", features = ["json"] }
semver = { version = "1.0.26", features = ["serde"] }
http = "1.3.1"
axum = { version = "0.8.4", default-features = false, features = ["json"] }
