[package]
name = "huus-web"
version = "0.1.0"
edition = "2024"

[dependencies]
pg = { package = "chuchi-postgres", version = "0.2.0", features = [
	"json",
	"crypto-token",
	"chuchi",
] }
clap = { version = "4.0", features = ["derive"] }
axum = { version = "0.8.4", features = ["macros"] }
tower-http = { version = "0.6.6", features = ["cors", "fs", "trace"] }
# tower = { version = "0.5", features = ["util"] }
# serde_json = "1.0"
# serde_urlencoded = "0.7"
# http-body-util = "0.1"
internal-api = { package = "huus-internal-api", path = "../huus-internal-api", features = [
	"client",
	"postgres",
] }
tokio = { version = "1.45.1", features = [
	"rt-multi-thread",
	"fs",
	"sync",
	"macros",
	"tracing",
	"signal",
] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
async-trait = "0.1.81"
crypto = { package = "chuchi-crypto", version = "0.1.0", features = [
	"b64",
	"serde",
	"hash",
	"postgres",
] }
thiserror = "2.0.12"
# simple-bytes = "0.2.14"
bcrypt = "0.15.1"
rand = "0.9.2"

[dev-dependencies]
tracing-test = { version = "0.2.4", features = ["no-env-filter"] }
