[package]
name = "huus"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.45.1", features = [
	"rt-multi-thread",
	"fs",
	"io-util",
	"sync",
	"macros",
	"tracing",
	"process",
] }
thiserror = "2.0.12"
bollard = "0.19.1"
bcrypt = "0.17.0"
tokio-postgres = "0.7.13"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.2"
libc = "0.2.174"
