[package]
name = "internal-api"
version = "0.1.0"
edition = "2024"

[features]
postgres = ["dep:postgres-types", "dep:bytes"]
client = ["dep:reqwest"]
bytes = ["dep:bytes"]

[dependencies]
tracing = "0.1"
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
chuchi-postgres = { version = "0.2.0", features = [
	"json",
], default-features = false }
semver = { version = "1.0.26", features = ["serde"] }
http = "1.3.1"
axum = { version = "0.8.4", default-features = false, features = ["json"] }
chuchi-crypto = { version = "0.1.2", features = ["b64", "serde"] }
reqwest = { version = "0.12.22", optional = true, features = ["json"] }
postgres-types = { version = "0.2.9", optional = true }
bytes = { version = "1.10.1", optional = true }
serde_plain = "1.0.2"
