[package]
name = "server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "hostdinghy"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12.22", features = [
	"http2",
	"charset",
	"gzip",
	"brotli",
	"json",
], default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.45.1", features = [
	"rt-multi-thread",
	"fs",
	"io-util",
	"sync",
	"macros",
	"tracing",
	"process",
] }
thiserror = "2.0.12"
bollard = "0.19.1"
bcrypt = "0.17.0"
tokio-postgres = "0.7.13"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.2"
libc = "0.2.174"
api = { package = "internal-api", path = "../internal-api" }
chuchi-postgres = { version = "0.2.0", features = ["json"] }
rcgen = "0.14.2"
tokio-rustls = "0.26.2"
axum = { version = "0.8.4", features = ["http2"] }
hyper = { version = "1.6.0", features = ["http1", "http2", "server"] }
hyper-util = { version = "0.1.15", features = [
	"http1",
	"http2",
	"tokio",
	"service",
	"server",
] }
tower = { version = "0.5.2", features = ["tracing", "tokio", "tokio-util"] }
semver = { version = "1.0.26", features = ["serde"] }
chuchi-crypto = { version = "0.2.0-pre.0", features = ["b64", "serde", "hash"] }
subtle = "2.6.1"
regex = "1.11.1"
dotenvy = "0.15.7"
